project PT. Mandiri Technology Sejahtera

--- a/brand.html
+++ b/brand.html
@@ -20,10 +20,9 @@
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="./assets/styles/navbar.css" />
         <link rel="stylesheet" href="./assets/styles/style.css" />
-        <link rel="stylesheet" href="./assets/styles/brand.css" />
+        <link rel="stylesheet" href="./assets/styles/B-C.css" />
         <link rel="stylesheet" href="./assets/styles/footer.css" />
-        <script src="./assets/js/navbar.js"></script>
-        <title>Detail product</title>
+        <title>Brand</title>
     </head>
     <body>
         <div class="template">
@@ -79,7 +78,7 @@
                 <div class="top-exp">
                     <div class="top-left-exp">
                         <h3 class="subtitle-exp">TOP BRANDS</h3>
-                        <h2 class="title-exp">Explore various brands</h2>
+                        <h2 class="title-exp">EXPLORE VARIOUS BRANDS</h2>
                     </div>
                 </div>
                 <div class="bottom-exp">
@@ -88,7 +87,7 @@
                             <a href="./category.html">
                                 <div class="card-top-exp">
                                     <img
-                                        src="./assets/images/asus.png"
+                                        src="./assets/images/nike.png"
                                         alt="card-image"
                                     />
                                 </div>
@@ -103,7 +102,7 @@
                             <a href="./category.html">
                                 <div class="card-top-exp">
                                     <img
-                                        src="./assets/images/lenovo.png"
+                                        src="./assets/images/nike.png"
                                         alt="card-image"
                                     />
                                 </div>
@@ -118,7 +117,7 @@
                             <a href="./category.html">
                                 <div class="card-top-exp">
                                     <img
-                                        src="./assets/images/adidas.jpeg"
+                                        src="./assets/images/nike.png"
                                         alt="card-image"
                                     />
                                 </div>
@@ -148,7 +147,7 @@
                             <a href="./category.html">
                                 <div class="card-top-exp">
                                     <img
-                                        src="./assets/images/adidas.jpeg"
+                                        src="./assets/images/nike.png"
                                         alt="card-image"
                                     />
                                 </div>
@@ -163,7 +162,7 @@
                             <a href="./category.html">
                                 <div class="card-top-exp">
                                     <img
-                                        src="./assets/images/asus.png"
+                                        src="./assets/images/nike.png"
                                         alt="card-image"
                                     />
                                 </div>
@@ -193,7 +192,7 @@
                             <a href="./category.html">
                                 <div class="card-top-exp">
                                     <img
-                                        src="./assets/images/lenovo.png"
+                                        src="./assets/images/nike.png"
                                         alt="card-image"
                                     />
                                 </div>
@@ -204,74 +203,74 @@
                                 </div>
                             </a>
                         </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="footer-hdm" id="footer">
-                <div class="footer-right-hdm">
-                    <div class="group-list-hdm">
-                        <ul>
-                            <h3>PHONE</h3>
-                            <a href="">
-                                <li>
-                                    <img
-                                        src="./assets/icons/mobile.svg"
-                                        alt="icon"
-                                    />
-                                    08158971348
-                                </li>
-                                <li>
-                                    <img
-                                        src="./assets/icons/phone.svg"
-                                        alt="icon"
-                                    />
-                                    PHONE: 021-566 8707
-                                </li>
-                            </a>
-                        </ul>
-                    </div>
-                    <div class="group-list-hdm">
-                        <ul>
-                            <h3>EMAIL</h3>
-                            <a href="">
-                                <li>
-                                    <img
-                                        src="./assets/icons/email.svg"
-                                        alt="icon"
-                                    />
-                                    thomas@berkat-anugrah.net
-                                </li>
-                            </a>
-                            <a href="">
-                                <li>
-                                    <img
-                                        src="./assets/icons/email.svg"
-                                        alt="icon"
-                                    />
-                                    sales@berkat-anugrah.net
-                                </li>
-                            </a>
-                        </ul>
-                    </div>
-                    <div class="group-list-hdm">
-                        <ul>
-                            <h3>ADDRESS</h3>
-                            <a href="">
-                                <li>
-                                    <img
-                                        src="./assets/icons/location.svg"
-                                        alt="icon"
-                                    />
-                                    JL Tanjung Duren Raya No.4 Kav 373 Jakarta –
-                                    Barat 11470
-                                </li>
-                            </a>
-                        </ul>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="footer-hdm" id="footer">
+            <div class="footer-right-hdm">
+                <div class="group-list-hdm">
+                    <ul>
+                        <h3>PHONE</h3>
+                        <a href="">
+                            <li>
+                                <img
+                                    loading="lazy"
+                                    src="./assets/icons/phone.svg"
+                                    alt="icon"
+                                />
+                                +6285881308687
+                            </li>
+                        </a>
+                    </ul>
+                </div>
+                <div class="group-list-hdm">
+                    <ul>
+                        <h3>EMAIL</h3>
+                        <a href="">
+                            <li>
+                                <img
+                                    loading="lazy"
+                                    src="./assets/icons/email.svg"
+                                    alt="icon"
+                                />
+                                sales@mandiri-technology-sejahtera.com
+                            </li>
+                        </a>
+                    </ul>
+                </div>
+                <div class="group-list-hdm">
+                    <ul>
+                        <h3>ADDRESS</h3>
+                        <a href="">
+                            <li>
+                                <img
+                                    loading="lazy"
+                                    src="./assets/icons/location.svg"
+                                    alt="icon"
+                                />
+                                JL Tanjung Duren Raya No.4 Kav 373 Jakarta –
+                                Barat 11470
+                            </li>
+                        </a>
+                    </ul>
+                </div>
+            </div>
+            <div class="copyright">
+                <small
+                    >© 2021 Mandiri Technology Sejahtera, All Right
+                    Reserved</small
+                >
+            </div>
+        </div>
+
+        <a href="https://wa.me/0129188218271" target="_blank">
+            <div class="wa-feature">
+                <img src="./assets/images/wa.png" alt="wa" />
+            </div>
+        </a>
+        <script src="./assets/js/navbar.js"></script>
 
         <script>
             const menuContainer = document.querySelector(".bottom-exp");
