--- a/category.html
+++ b/category.html
@@ -20,8 +20,9 @@
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="./assets/styles/navbar.css" />
         <link rel="stylesheet" href="./assets/styles/style.css" />
+        <link rel="stylesheet" href="./assets/styles/B-C.css" />
         <link rel="stylesheet" href="./assets/styles/footer.css" />
-        <title>Detail product</title>
+        <title>Category product</title>
     </head>
     <body>
         <div class="template">
@@ -39,7 +40,10 @@
                             <a href="./index.html">| HOMEPAGE |</a>
                         </li>
                         <li>
-                            <a href="#categories">| CATEGORIES |</a>
+                            <a href="./brand.html">| BRANDS |</a>
+                        </li>
+                        <li>
+                            <a href="#categories">| LIST CATEGORIES |</a>
                         </li>
                         <li><a href="#footer">| CONTACT |</a></li>
                     </ul>
@@ -48,225 +52,213 @@
 
             <div class="container-section4-section4mz4">
                 <h1 class="section4-title-section4mz4">
-                    Where creators run their business
+                    All the best from Adidas
                 </h1>
                 <p class="section4-body-section4mz4">
                     Herox helps businesses in Africa get paid by anyone,
                     anywhere in the world securedly.
                 </p>
-                <button class="section4-btn-section4mz4">Get Started</button>
-                <div class="section4-galerry-section4mz4">
-                    <div class="galrry-item-section4mz4">
-                        <img
-                            src="https://images-builder.vercel.app/img/image1_section4mz4.png"
-                            alt="image1"
-                        />
-                        <span>Jhon Doe</span>
-                    </div>
-                    <div class="galrry-item-section4mz4">
-                        <img
-                            src="https://images-builder.vercel.app/img/image2_section4mz4.png"
-                            alt="image2"
-                        /><span>Jhon Doe</span>
-                    </div>
-                    <div class="galrry-item-section4mz4">
-                        <img
-                            src="https://images-builder.vercel.app/img/image3_section4mz4.png"
-                            alt="image3"
-                        /><span>Jhon Doe</span>
-                    </div>
-                    <div class="galrry-item-section4mz4">
-                        <img
-                            src="https://images-builder.vercel.app/img/image4_section4mz4.png"
-                            alt="image4"
-                        />
-                        <span>Jhon Doe</span>
-                    </div>
-                </div>
+                <button class="section4-btn-section4mz4">Exploration</button>
             </div>
 
             <div class="container-exp" id="categories">
                 <div class="top-exp">
                     <div class="top-left-exp">
                         <h3 class="subtitle-exp">TOP BRANDS</h3>
-                        <h2 class="title-exp">Explore various brands</h2>
+                        <h2 class="title-exp">EXPLORE VARIOUS CATEGORIES</h2>
                     </div>
                 </div>
                 <div class="bottom-exp">
                     <div class="wrap-bottom-exp">
                         <div class="card-exp">
-                            <div class="card-top-exp">
-                                <img
-                                    src="./assets/images/asus.png"
-                                    alt="card-image"
-                                />
-                            </div>
-                            <div class="card-bottom-exp">
-                                <div class="title-bottom-exp">
-                                    <h4>ASUS</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-exp">
-                            <div class="card-top-exp">
-                                <img
-                                    src="./assets/images/lenovo.png"
-                                    alt="card-image"
-                                />
-                            </div>
-                            <div class="card-bottom-exp">
-                                <div class="title-bottom-exp">
-                                    <h4>LENOVO</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-exp">
-                            <div class="card-top-exp">
-                                <img
-                                    src="./assets/images/adidas.jpeg"
-                                    alt="card-image"
-                                />
-                            </div>
-                            <div class="card-bottom-exp">
-                                <div class="title-bottom-exp">
-                                    <h4>ADIDAS</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-exp">
-                            <div class="card-top-exp">
-                                <img
-                                    src="./assets/images/nike.png"
-                                    alt="card-image"
-                                />
-                            </div>
-                            <div class="card-bottom-exp">
-                                <div class="title-bottom-exp">
-                                    <h4>NIKE</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-exp">
-                            <div class="card-top-exp">
-                                <img
-                                    src="./assets/images/adidas.jpeg"
-                                    alt="card-image"
-                                />
-                            </div>
-                            <div class="card-bottom-exp">
-                                <div class="title-bottom-exp">
-                                    <h4>ADIDAS</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-exp">
-                            <div class="card-top-exp">
-                                <img
-                                    src="./assets/images/asus.png"
-                                    alt="card-image"
-                                />
-                            </div>
-                            <div class="card-bottom-exp">
-                                <div class="title-bottom-exp">
-                                    <h4>ASUS</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-exp">
-                            <div class="card-top-exp">
-                                <img
-                                    src="./assets/images/nike.png"
-                                    alt="card-image"
-                                />
-                            </div>
-                            <div class="card-bottom-exp">
-                                <div class="title-bottom-exp">
-                                    <h4>NIKE</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-exp">
-                            <div class="card-top-exp">
-                                <img
-                                    src="./assets/images/lenovo.png"
-                                    alt="card-image"
-                                />
-                            </div>
-                            <div class="card-bottom-exp">
-                                <div class="title-bottom-exp">
-                                    <h4>LENOVO</h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="footer-hdm" id="footer">
-                <div class="footer-right-hdm">
-                    <div class="group-list-hdm">
-                        <ul>
-                            <h3>PHONE</h3>
-                            <a href="">
-                                <li>
+                            <a href="./products.html">
+                                <div class="card-top-exp">
                                     <img
-                                        src="./assets/icons/mobile.svg"
-                                        alt="icon"
+                                        src="./assets/images/nike.png"
+                                        alt="card-image"
                                     />
-                                    08158971348
-                                </li>
-                                <li>
-                                    <img
-                                        src="./assets/icons/phone.svg"
-                                        alt="icon"
-                                    />
-                                    PHONE: 021-566 8707
-                                </li>
+                                </div>
+                                <div class="card-bottom-exp">
+                                    <div class="title-bottom-exp">
+                                        <h4>ASUS</h4>
+                                    </div>
+                                </div>
                             </a>
-                        </ul>
-                    </div>
-                    <div class="group-list-hdm">
-                        <ul>
-                            <h3>EMAIL</h3>
-                            <a href="">
-                                <li>
+                        </div>
+                        <div class="card-exp">
+                            <a href="./products.html">
+                                <div class="card-top-exp">
                                     <img
-                                        src="./assets/icons/email.svg"
-                                        alt="icon"
+                                        src="./assets/images/nike.png"
+                                        alt="card-image"
                                     />
-                                    thomas@berkat-anugrah.net
-                                </li>
+                                </div>
+                                <div class="card-bottom-exp">
+                                    <div class="title-bottom-exp">
+                                        <h4>LENOVO</h4>
+                                    </div>
+                                </div>
                             </a>
-                            <a href="">
-                                <li>
+                        </div>
+                        <div class="card-exp">
+                            <a href="./products.html">
+                                <div class="card-top-exp">
                                     <img
-                                        src="./assets/icons/email.svg"
-                                        alt="icon"
+                                        src="./assets/images/nike.png"
+                                        alt="card-image"
                                     />
-                                    sales@berkat-anugrah.net
-                                </li>
+                                </div>
+                                <div class="card-bottom-exp">
+                                    <div class="title-bottom-exp">
+                                        <h4>ADIDAS</h4>
+                                    </div>
+                                </div>
                             </a>
-                        </ul>
-                    </div>
-                    <div class="group-list-hdm">
-                        <ul>
-                            <h3>ADDRESS</h3>
-                            <a href="">
-                                <li>
+                        </div>
+                        <div class="card-exp">
+                            <a href="./products.html">
+                                <div class="card-top-exp">
                                     <img
-                                        src="./assets/icons/location.svg"
-                                        alt="icon"
+                                        src="./assets/images/nike.png"
+                                        alt="card-image"
                                     />
-                                    JL Tanjung Duren Raya No.4 Kav 373 Jakarta –
-                                    Barat 11470
-                                </li>
+                                </div>
+                                <div class="card-bottom-exp">
+                                    <div class="title-bottom-exp">
+                                        <h4>NIKE</h4>
+                                    </div>
+                                </div>
                             </a>
-                        </ul>
+                        </div>
+                        <div class="card-exp">
+                            <a href="./products.html">
+                                <div class="card-top-exp">
+                                    <img
+                                        src="./assets/images/nike.png"
+                                        alt="card-image"
+                                    />
+                                </div>
+                                <div class="card-bottom-exp">
+                                    <div class="title-bottom-exp">
+                                        <h4>ADIDAS</h4>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card-exp">
+                            <a href="./products.html">
+                                <div class="card-top-exp">
+                                    <img
+                                        src="./assets/images/nike.png"
+                                        alt="card-image"
+                                    />
+                                </div>
+                                <div class="card-bottom-exp">
+                                    <div class="title-bottom-exp">
+                                        <h4>ASUS</h4>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card-exp">
+                            <a href="./products.html">
+                                <div class="card-top-exp">
+                                    <img
+                                        src="./assets/images/nike.png"
+                                        alt="card-image"
+                                    />
+                                </div>
+                                <div class="card-bottom-exp">
+                                    <div class="title-bottom-exp">
+                                        <h4>NIKE</h4>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card-exp">
+                            <a href="./products.html">
+                                <div class="card-top-exp">
+                                    <img
+                                        src="./assets/images/nike.png"
+                                        alt="card-image"
+                                    />
+                                </div>
+                                <div class="card-bottom-exp">
+                                    <div class="title-bottom-exp">
+                                        <h4>LENOVO</h4>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
+        <div class="footer-hdm" id="footer">
+            <div class="footer-right-hdm">
+                <div class="group-list-hdm">
+                    <ul>
+                        <h3>PHONE</h3>
+                        <a href="">
+                            <li>
+                                <img
+                                    loading="lazy"
+                                    src="./assets/icons/phone.svg"
+                                    alt="icon"
+                                />
+                                +6285881308687
+                            </li>
+                        </a>
+                    </ul>
+                </div>
+                <div class="group-list-hdm">
+                    <ul>
+                        <h3>EMAIL</h3>
+                        <a href="">
+                            <li>
+                                <img
+                                    loading="lazy"
+                                    src="./assets/icons/email.svg"
+                                    alt="icon"
+                                />
+                                sales@mandiri-technology-sejahtera.com
+                            </li>
+                        </a>
+                    </ul>
+                </div>
+                <div class="group-list-hdm">
+                    <ul>
+                        <h3>ADDRESS</h3>
+                        <a href="">
+                            <li>
+                                <img
+                                    loading="lazy"
+                                    src="./assets/icons/location.svg"
+                                    alt="icon"
+                                />
+                                JL Tanjung Duren Raya No.4 Kav 373 Jakarta –
+                                Barat 11470
+                            </li>
+                        </a>
+                    </ul>
+                </div>
+            </div>
+            <div class="copyright">
+                <small
+                    >© 2021 Mandiri Technology Sejahtera, All Right
+                    Reserved</small
+                >
+            </div>
+        </div>
+
+        <a href="https://wa.me/0129188218271" target="_blank">
+            <div class="wa-feature">
+                <img src="./assets/images/wa.png" alt="wa" />
+            </div>
+        </a>
+
+        <script src="./assets/js/navbar.js"></script>
         <script>
             const menuContainer = document.querySelector(".bottom-exp");
             const leftButton = document.querySelector(".arrow-exp.left-exp");
