--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="overlay-bmw"></div>
                     <div class="content-hero-bmw">
                         <h1 class="title-hero-bmw">
-                            PT. Mandiri Technology Sejahtera | <span id="text-animation"></span>
+                            CV. Mandiri Technology Sejahtera | <span id="text-animation"></span>
                         </h1>
                         <p class="text-hero-bmw">
                             We are delivering beautiful digital products
@@ -150,84 +150,100 @@
                 </p>
                 <div class="wrap-foto-mou">
                     <div class="foto-mou">
-                        <div class="skeleton-card">
-                            <div class="skeleton-image">Loading...</div>
-                        </div>
-                        <img
+                            <a href="./detail-product.html">
+                            <div class="skeleton-card">
+                                <div class="skeleton-image">Loading...</div>
+                            </div>
+                            <img
                             loading="lazy"
                             src="./assets/images/cpu.jpeg"
                             alt="image"
-                        />
+                            />
+                        </a>
                     </div>
                     <div class="foto-mou">
-                        <div class="skeleton-card">
-                            <div class="skeleton-image">Loading...</div>
-                        </div>
-                        <img
+                            <a href="./detail-product.html">
+                            <div class="skeleton-card">
+                                <div class="skeleton-image">Loading...</div>
+                            </div>
+                            <img
                             loading="lazy"
                             src="./assets/images/vga.jpeg"
                             alt="image"
-                        />
+                            />
+                        </a>
                     </div>
                     <div class="foto-mou">
-                        <div class="skeleton-card">
-                            <div class="skeleton-image">Loading...</div>
-                        </div>
-                        <img
+                            <a href="./detail-product.html">
+                            <div class="skeleton-card">
+                                <div class="skeleton-image">Loading...</div>
+                            </div>
+                            <img
                             loading="lazy"
                             src="./assets/images/keyboard.jpeg"
                             alt="image"
-                        />
+                            />
+                        </a>
                     </div>
                     <div class="foto-mou">
-                        <div class="skeleton-card">
-                            <div class="skeleton-image">Loading...</div>
-                        </div>
-                        <img
+                            <a href="./detail-product.html">
+                            <div class="skeleton-card">
+                                <div class="skeleton-image">Loading...</div>
+                            </div>
+                            <img
                             loading="lazy"
                             src="./assets/images/laptop.jpeg"
                             alt="image"
-                        />
+                            />
+                        </a>
                     </div>
                     <div class="foto-mou">
-                        <div class="skeleton-card">
-                            <div class="skeleton-image">Loading...</div>
-                        </div>
-                        <img
+                            <a href="./detail-product.html">
+                            <div class="skeleton-card">
+                                <div class="skeleton-image">Loading...</div>
+                            </div>
+                            <img
                             loading="lazy"
                             src="./assets/images/kamera.jpeg"
                             alt="image"
-                        />
+                            />
+                        </a>
                     </div>
                     <div class="foto-mou">
-                        <div class="skeleton-card">
-                            <div class="skeleton-image">Loading...</div>
-                        </div>
-                        <img
+                            <a href="./detail-product.html">
+                            <div class="skeleton-card">
+                                <div class="skeleton-image">Loading...</div>
+                            </div>
+                            <img
                             loading="lazy"
                             src="./assets/images/shoes.jpeg"
                             alt="image"
-                        />
+                            />
+                        </a>
                     </div>
                     <div class="foto-mou">
-                        <div class="skeleton-card">
-                            <div class="skeleton-image">Loading...</div>
-                        </div>
-                        <img
+                            <a href="./detail-product.html">
+                            <div class="skeleton-card">
+                                <div class="skeleton-image">Loading...</div>
+                            </div>
+                            <img
                             loading="lazy"
                             src="./assets/images/kaos.jpeg"
                             alt="image"
-                        />
+                            />
+                        </a>
                     </div>
                     <div class="foto-mou">
-                        <div class="skeleton-card">
-                            <div class="skeleton-image">Loading...</div>
-                        </div>
-                        <img
+                            <a href="./detail-product.html">
+                            <div class="skeleton-card">
+                                <div class="skeleton-image">Loading...</div>
+                            </div>
+                            <img
                             loading="lazy"
                             src="./assets/images/vga.jpeg"
                             alt="image"
-                        />
+                            />
+                        </a>
                     </div>
                 </div>
                 <a href="./brand.html">
@@ -558,13 +574,6 @@
                     <div class="panel-mz2">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
-                    <button class="accordion-mz2">
-                        <span>05. What payment methods do you accept?</span>
-                        <img src="https://images-builder.vercel.app/img/add_section4mz2.svg" alt="icon">
-                    </button>
-                    <div class="panel-mz2">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
                 </div>
                 <div class="section4-bottom">
                     <h1>Still have a questions?</h1>
@@ -581,8 +590,7 @@
                         <ul>
                             <h3>PHONE</h3>
                             <a href="">
-                                <li><img loading="lazy" src="./assets/icons/mobile.svg" alt="icon" /> 08158971348</li>
-                                <li><img loading="lazy" src="./assets/icons/phone.svg" alt="icon" /> PHONE: 021-566 8707</li>
+                                <li><img loading="lazy" src="./assets/icons/phone.svg" alt="icon" /> +6285881308687</li>
                             </a>
                         </ul>
                     </div>
@@ -590,10 +598,7 @@
                         <ul>
                             <h3>EMAIL</h3>
                             <a href="">
-                                <li><img loading="lazy" src="./assets/icons/email.svg" alt="icon" /> thomas@berkat-anugrah.net</li>
-                            </a>
-                            <a href="">
-                                <li><img loading="lazy" src="./assets/icons/email.svg" alt="icon" /> sales@berkat-anugrah.net</li>
+                                <li><img loading="lazy" src="./assets/icons/email.svg" alt="icon" /> sales@mandiri-technology-sejahtera.com</li>
                             </a>
                         </ul>
                     </div>
@@ -610,6 +615,9 @@
                         </ul>
                     </div>
                 </div>
+                <div class="copyright">
+                    <small>© 2021 Mandiri Technology Sejahtera, All Right Reserved</small>
+                </div>
             </div>
 
             <a href="https://wa.me/0129188218271" target="_blank">
@@ -618,15 +626,16 @@
                 </div>
             </a>
 
-        <script src="./assets/js/navbar.js"></script>
         <script>
-            var i, acc = document.getElementsByClassName("accordion-mz2");
+            var i, acc = document.querySelectorAll("accordion-mz2");
             for (i = 0; i < acc.length; i++) acc[i].addEventListener("click", function() {
                 this.classList.toggle("active");
                 var e = this.nextElementSibling;
                 "block" === e.style.display ? e.style.display = "none" : e.style.display = "block";
             })
         </script>
+        <script src="./assets/js/navbar.js"></script>
+        
         <script>
             const titleElement = document.querySelector(".title-hero-bmw");
             const textElement = document.getElementById("text-animation");
