--- a/products.html
+++ b/products.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="./assets/styles/style.css" />
         <link rel="stylesheet" href="./assets/styles/products.css" />
         <link rel="stylesheet" href="./assets/styles/footer.css" />
-        <title>Detail product</title>
+        <title>List product</title>
     </head>
     <body>
         <div class="template">
@@ -40,119 +40,112 @@
                             <a href="./index.html">| HOMEPAGE |</a>
                         </li>
                         <li>
-                            <a href="./products.html">| PRODUCTS |</a>
+                            <a href="./category.html">| CATEGORIES |</a>
                         </li>
                         <li>
-                            <a href="#detail">| LIST DETAIL |</a>
+                            <a href="#list-product">| LIST PRODUCTS |</a>
                         </li>
                         <li><a href="#footer">| CONTACT |</a></li>
                     </ul>
                 </div>
             </div>
 
-            <img loading="lazy" src="./assets/images/square.svg" alt="square" class="square">
-
-            <div class="info-detail">
-                <a href="./index.html">
-                    <p>HOMEPAGE</p>
-                </a>
-                /
-                <a href="./brand.html">
-                    <p>BRANDS</p>
-                </a>
-                /
-                <a href="./category.html">
-                    <p>CATEGORIES</p>
-                </a>
-                /
-                <p>DETAIL-PRODUCT</p>
-            </div>
-            <div class="wrapper-detail-product">
-                <div class="child-detail-product">
-                    <div class="child-detail-product-left">
-                        <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
-                    </div>
-                    <div class="child-detail-product-right">
-                        <h4>Detail Product</h3>
-                        <h1>Canon Camera EOS</h1>
-                        <small>CANON</small>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum deleniti, dolore 
-                            voluptatum assumenda a, nisi, fugit numquam quidem quisquam distinctio!
-                        </p>
-                        <div class="prize">
-                            $120
+            <div class="wrapper-products">
+                
+                <div class="info-list-products">
+                    <p>12,911 items in <b>Mobile accessory</b></p>
+                    <div class="wrapper-btn-info">
+                        <div class="child-info">
+                            <img src="./assets/icons/chevron.svg" alt="icon" id="rotateIcon" />
                         </div>
-                        <ul>
-                            <li>Size Products: Small</li>
-                            <li>Total stock: 120Pcs</li>
-                            <li>Condition product: New</li>
-                        </ul>
                     </div>
                 </div>
-            </div>
 
-            <img loading="lazy" src="./assets/images/square.svg" alt="square" class="square">
-
-            <div class="section-tabs" id="detail">
-                <div class="tabs">
-                    <div class="tab-button active" onclick="changeTab(0)">
-                        DESCRIPTION
+                <div class="wrapper-list-products" id="list-product">
+                    <div class="child-product">
+                        <div class="child-product-left">
+                            <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
+                        </div>
+                        <div class="child-product-right">
+                            <h4>Canon Camera EOS 2022, Black 10x Zoom</h3>
+                            <h1>$100</h1>
+                            <small>CANON</small>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum deleniti, dolore 
+                                voluptatum assumenda a, nisi, fugit numquam quidem quisquam distinctio!
+                            </p>
+                            <a href="./detail-product.html">
+                                <button class="btn-product">View Detail</button>
+                            </a>
+                        </div>
                     </div>
-                    <div class="tab-button" onclick="changeTab(1)">SPESIFICATION</div>
-                    <div class="tab-button" onclick="changeTab(2)">BRAND</div>
-                </div>
-                <div class="tab-content">
-                    <div class="tab-item active">
-                        <h2>CANON CANNON EOS ?</h2>
-                        <p>
-                            Canon cameras are among the leading camera brands in the world, 
-                            known for their innovation and high quality. Canon cameras have become the top choice 
-                            for both amateur and professional photographers worldwide.
-                            <br />
-                            <br />
-                            Canon cameras are photographic devices designed to capture images and record videos with 
-                            exceptional quality. They offer various features and specifications that allow 
-                            users to take outstanding photos and videos. Canon cameras are also known for their 
-                            elegant design and ergonomic build, making them comfortable to use in various shooting 
-                            situations.
-                            <br />
-                            <br />
-                        </p>
+                    <div class="child-product">
+                        <div class="child-product-left">
+                            <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
+                        </div>
+                        <div class="child-product-right">
+                            <h4>Canon Camera EOS 2022, Black 10x Zoom</h3>
+                            <h1>$100</h1>
+                            <small>CANON</small>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum deleniti, dolore 
+                                voluptatum assumenda a, nisi, fugit numquam quidem quisquam distinctio!
+                            </p>
+                            <a href="./detail-product.html">
+                                <button class="btn-product">View Detail</button>
+                            </a>
+                        </div>
                     </div>
-                    <div class="tab-item">
-                        <h2>SEPESIFICATIO CAMERA</h2>
-                        <p>
-                            Canon is a globally recognized brand in the field of imaging and photography. 
-                            Known for its rich history and commitment to innovation, Canon has established 
-                            itself as a leading player in the industry.
-                            <br />
-                            <br />
-                            The Canon brand has its roots dating back to the early 1930s when it was founded in Japan.
-                            Over the decades, Canon has consistently delivered high-quality imaging products, 
-                            ranging from cameras and camcorders to printers and scanners. Its dedication to research 
-                            and development has resulted in groundbreaking technologies that have reshaped the imaging
-                            industry.
-                            <br />
-                            <br />
-                        </p>
+                    <div class="child-product">
+                        <div class="child-product-left">
+                            <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
+                        </div>
+                        <div class="child-product-right">
+                            <h4>Canon Camera EOS 2022, Black 10x Zoom</h3>
+                            <h1>$100</h1>
+                            <small>CANON</small>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum deleniti, dolore 
+                                voluptatum assumenda a, nisi, fugit numquam quidem quisquam distinctio!
+                            </p>
+                            <a href="./detail-product.html">
+                                <button class="btn-product">View Detail</button>
+                            </a>
+                        </div>
                     </div>
-                    <div class="tab-item">
-                        <h2>Cannon</h2>
-                        <p>
-                            Canon is a globally recognized brand in the field of imaging and photography. 
-                            Known for its rich history and commitment to innovation, Canon has established 
-                            itself as a leading player in the industry.
-                            <br />
-                            <br />
-                            The Canon brand has its roots dating back to the early 1930s when it was founded in Japan.
-                            Over the decades, Canon has consistently delivered high-quality imaging products, 
-                            ranging from cameras and camcorders to printers and scanners. Its dedication to research 
-                            and development has resulted in groundbreaking technologies that have reshaped the imaging
-                            industry.
-                            <br />
-                            <br />
-                        </p>
+                    <div class="child-product">
+                        <div class="child-product-left">
+                            <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
+                        </div>
+                        <div class="child-product-right">
+                            <h4>Canon Camera EOS 2022, Black 10x Zoom</h3>
+                            <h1>$100</h1>
+                            <small>CANON</small>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum deleniti, dolore 
+                                voluptatum assumenda a, nisi, fugit numquam quidem quisquam distinctio!
+                            </p>
+                            <a href="./detail-product.html">
+                                <button class="btn-product">View Detail</button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="child-product">
+                        <div class="child-product-left">
+                            <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
+                        </div>
+                        <div class="child-product-right">
+                            <h4>Canon Camera EOS 2022, Black 10x Zoom</h3>
+                            <h1>$100</h1>
+                            <small>CANON</small>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum deleniti, dolore 
+                                voluptatum assumenda a, nisi, fugit numquam quidem quisquam distinctio!
+                            </p>
+                            <a href="./detail-product.html">
+                                <button class="btn-product">View Detail</button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -222,9 +215,8 @@
 
         </div>
 
-        <script src="./assets/js/rotate.js"></script>
-        <script src="./assets/js/tab.js"></script>
         <script src="./assets/js/navbar.js"></script>
+        <script src="./assets/js/rotate.js"></script>
         <script>
             const menuContainer = document.querySelector(".bottom-exp");
             const leftButton = document.querySelector(".arrow-exp.left-exp");
